--- a/python-school/dataframes/1-basics-sol.ipynb
+++ b/python-school/dataframes/1-basics-sol.ipynb
@@ -770,7 +770,7 @@
     "```\n",
     "\n",
     "```{note}\n",
-    "It is usually better to start reading any documentation you can find about the dataset before making tests like these. In some situations though, there is no documentation, so you _have to_ make this kind of tests to validate assumptions as much as you can.\n",
+    "It is usually better to start reading any documentation you can find about the dataset before making tests like these. In some situations though, there is no documentation, so you _have to_ make this kind of tests to validate your assumptions.\n",
     "```"
    ]
   },
@@ -1173,6 +1173,54 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "e13b5710",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (17_145, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>duration</th></tr><tr><td>duration[ms]</td></tr></thead><tbody><tr><td>1d</td></tr><tr><td>1d</td></tr><tr><td>1d</td></tr><tr><td>57d</td></tr><tr><td>2d</td></tr><tr><td>&hellip;</td></tr><tr><td>1d</td></tr><tr><td>1d</td></tr><tr><td>null</td></tr><tr><td>null</td></tr><tr><td>null</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (17_145, 1)\n",
+       "┌──────────────┐\n",
+       "│ duration     │\n",
+       "│ ---          │\n",
+       "│ duration[ms] │\n",
+       "╞══════════════╡\n",
+       "│ 1d           │\n",
+       "│ 1d           │\n",
+       "│ 1d           │\n",
+       "│ 57d          │\n",
+       "│ 2d           │\n",
+       "│ …            │\n",
+       "│ 1d           │\n",
+       "│ 1d           │\n",
+       "│ null         │\n",
+       "│ null         │\n",
+       "│ null         │\n",
+       "└──────────────┘"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "protests.select(pl.col('duration'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "6e4d82bc",
    "metadata": {
     "tags": [
@@ -1209,7 +1257,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────┴──────────────┴──────────────────┴──────────┘"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "c348a746",
    "metadata": {
     "scrolled": false
@@ -1295,7 +1343,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "1fde7d07",
    "metadata": {},
    "outputs": [
@@ -1338,7 +1386,7 @@
        "└────────────┴───────────┴───────┴──────┴───┴─────────┴────────────┴──────────┴──────────────┘"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "ea89e51e",
    "metadata": {
     "scrolled": true
@@ -1403,7 +1451,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "d62e3253",
    "metadata": {},
    "outputs": [
@@ -1476,7 +1524,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1497,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "38ba0787",
    "metadata": {},
    "outputs": [
@@ -1543,7 +1591,7 @@
        "└────────────┴───────────┴───────┴──────┴───┴──────────────┴────────────┴────────────┴─────────────┘"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,12 +1605,12 @@
    "id": "c9e67d1b",
    "metadata": {},
    "source": [
-    "It's possible to combine conditions like we already did in [Numpy filtering](array_select): for example by using the special operator conjunction `&` :"
+    "It's also possible to combine conditions like we already did in [Numpy filtering](array_select): for example by using the special operator conjunction `&` :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "2c1f87a9",
    "metadata": {},
    "outputs": [
@@ -1607,7 +1655,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1634,12 +1682,13 @@
    "source": [
     "### Sorting\n",
     "\n",
-    "To obtain a NEW dataframe sorted according to one or more columns, we can use the `.sort()` method: "
+    "To obtain a new dataframe sorted according to one or more columns, we can use the `.sort()` method.\n",
+    "For instance, to see the longest protests, we'd do:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "26ee6091",
    "metadata": {
     "scrolled": false
@@ -1672,7 +1721,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴─────────┴────────────┴──────────┴──────────────┘"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "0108206c",
    "metadata": {},
    "outputs": [
@@ -1733,7 +1782,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "5ddcfb06",
    "metadata": {
     "tags": [
@@ -1800,7 +1849,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1836,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "c2f2d672",
    "metadata": {
     "scrolled": false
@@ -1879,7 +1928,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1900,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "5d6c1233",
    "metadata": {},
    "outputs": [
@@ -1941,7 +1990,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1986,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "be2687b8",
    "metadata": {
     "tags": [
@@ -2001,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "ff3ecec9",
    "metadata": {
     "tags": [
@@ -2044,7 +2093,7 @@
        "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2068,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "ec39a0dd",
    "metadata": {},
    "outputs": [],
@@ -2083,63 +2132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "2395c320",
    "metadata": {
     "tags": [
      "hide-input",
      "answer"
-    ]
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (2, 10)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>No. overall</th><th>No. in season</th><th>Season</th><th>Title</th><th>Directed by</th><th>Written by</th><th>Novel(s) adapted</th><th>Original air date</th><th>U.S. viewers(millions)</th><th>Imdb rating</th></tr><tr><td>i64</td><td>i64</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>1</td><td>1</td><td>1</td><td>&quot;&quot;Winter Is Coming&quot;&quot;</td><td>&quot;Tim Van Patten&quot;</td><td>&quot;David Benioff &amp; D. B. Weiss&quot;</td><td>&quot;A Game of Thrones&quot;</td><td>&quot;17-Apr-11&quot;</td><td>2.22</td><td>9.1</td></tr><tr><td>5</td><td>5</td><td>1</td><td>&quot;&quot;The Wolf and the Lion&quot;&quot;</td><td>&quot;Brian Kirk&quot;</td><td>&quot;David Benioff &amp; D. B. Weiss&quot;</td><td>&quot;A Game of Thrones&quot;</td><td>&quot;15-May-11&quot;</td><td>2.58</td><td>9.1</td></tr></tbody></table></div>"
-      ],
-      "text/plain": [
-       "shape: (2, 10)\n",
-       "┌─────────┬────────┬────────┬──────────────┬───┬──────────────┬─────────────┬─────────────┬────────┐\n",
-       "│ No.     ┆ No. in ┆ Season ┆ Title        ┆ … ┆ Novel(s)     ┆ Original    ┆ U.S. viewer ┆ Imdb   │\n",
-       "│ overall ┆ season ┆ ---    ┆ ---          ┆   ┆ adapted      ┆ air date    ┆ s(millions) ┆ rating │\n",
-       "│ ---     ┆ ---    ┆ i64    ┆ str          ┆   ┆ ---          ┆ ---         ┆ ---         ┆ ---    │\n",
-       "│ i64     ┆ i64    ┆        ┆              ┆   ┆ str          ┆ str         ┆ f64         ┆ f64    │\n",
-       "╞═════════╪════════╪════════╪══════════════╪═══╪══════════════╪═════════════╪═════════════╪════════╡\n",
-       "│ 1       ┆ 1      ┆ 1      ┆ \"Winter Is   ┆ … ┆ A Game of    ┆ 17-Apr-11   ┆ 2.22        ┆ 9.1    │\n",
-       "│         ┆        ┆        ┆ Coming\"      ┆   ┆ Thrones      ┆             ┆             ┆        │\n",
-       "│ 5       ┆ 5      ┆ 1      ┆ \"The Wolf    ┆ … ┆ A Game of    ┆ 15-May-11   ┆ 2.58        ┆ 9.1    │\n",
-       "│         ┆        ┆        ┆ and the      ┆   ┆ Thrones      ┆             ┆             ┆        │\n",
-       "│         ┆        ┆        ┆ Lion\"        ┆   ┆              ┆             ┆             ┆        │\n",
-       "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fav_episodes = game.filter(\n",
-    "    pl.col(\"Title\").str.contains(favorite[\"Paolo\"])\n",
-    "    | pl.col(\"Title\").str.contains(favorite[\"Chiara\"])\n",
-    ")\n",
-    "fav_episodes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "86d941ff",
-   "metadata": {
-    "tags": [
-     "remove-cell"
     ]
    },
    "outputs": [
@@ -2177,6 +2175,57 @@
     }
    ],
    "source": [
+    "fav_episodes = game.filter(\n",
+    "    pl.col(\"Title\").str.contains(favorite[\"Paolo\"])\n",
+    "    | pl.col(\"Title\").str.contains(favorite[\"Chiara\"])\n",
+    ")\n",
+    "fav_episodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "86d941ff",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (2, 10)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>No. overall</th><th>No. in season</th><th>Season</th><th>Title</th><th>Directed by</th><th>Written by</th><th>Novel(s) adapted</th><th>Original air date</th><th>U.S. viewers(millions)</th><th>Imdb rating</th></tr><tr><td>i64</td><td>i64</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>1</td><td>1</td><td>1</td><td>&quot;&quot;Winter Is Coming&quot;&quot;</td><td>&quot;Tim Van Patten&quot;</td><td>&quot;David Benioff &amp; D. B. Weiss&quot;</td><td>&quot;A Game of Thrones&quot;</td><td>&quot;17-Apr-11&quot;</td><td>2.22</td><td>9.1</td></tr><tr><td>5</td><td>5</td><td>1</td><td>&quot;&quot;The Wolf and the Lion&quot;&quot;</td><td>&quot;Brian Kirk&quot;</td><td>&quot;David Benioff &amp; D. B. Weiss&quot;</td><td>&quot;A Game of Thrones&quot;</td><td>&quot;15-May-11&quot;</td><td>2.58</td><td>9.1</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (2, 10)\n",
+       "┌─────────┬────────┬────────┬──────────────┬───┬──────────────┬─────────────┬─────────────┬────────┐\n",
+       "│ No.     ┆ No. in ┆ Season ┆ Title        ┆ … ┆ Novel(s)     ┆ Original    ┆ U.S. viewer ┆ Imdb   │\n",
+       "│ overall ┆ season ┆ ---    ┆ ---          ┆   ┆ adapted      ┆ air date    ┆ s(millions) ┆ rating │\n",
+       "│ ---     ┆ ---    ┆ i64    ┆ str          ┆   ┆ ---          ┆ ---         ┆ ---         ┆ ---    │\n",
+       "│ i64     ┆ i64    ┆        ┆              ┆   ┆ str          ┆ str         ┆ f64         ┆ f64    │\n",
+       "╞═════════╪════════╪════════╪══════════════╪═══╪══════════════╪═════════════╪═════════════╪════════╡\n",
+       "│ 1       ┆ 1      ┆ 1      ┆ \"Winter Is   ┆ … ┆ A Game of    ┆ 17-Apr-11   ┆ 2.22        ┆ 9.1    │\n",
+       "│         ┆        ┆        ┆ Coming\"      ┆   ┆ Thrones      ┆             ┆             ┆        │\n",
+       "│ 5       ┆ 5      ┆ 1      ┆ \"The Wolf    ┆ … ┆ A Game of    ┆ 15-May-11   ┆ 2.58        ┆ 9.1    │\n",
+       "│         ┆        ┆        ┆ and the      ┆   ┆ Thrones      ┆             ┆             ┆        │\n",
+       "│         ┆        ┆        ┆ Lion\"        ┆   ┆              ┆             ┆             ┆        │\n",
+       "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "fav_episodes"
    ]
   },
@@ -2194,7 +2243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "5b7f5d5e",
    "metadata": {
     "tags": [
@@ -2210,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "e8e9a1d7",
    "metadata": {},
    "outputs": [
@@ -2261,7 +2310,7 @@
        "└─────────┴────────┴────────┴───────────────┴───┴──────────┴───────────────┴──────────────┴────────┘"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
