--- a/python-school/visualization/1-basics.ipynb
+++ b/python-school/visualization/1-basics.ipynb
@@ -460,7 +460,7 @@
    "source": [
     "```{seealso}\n",
     "Legends in Matplotlib are quite flexible in layout, placement, and what\n",
-    "Artists they can represent. They are discussed in detail in the [legend guide](https://matplotlib.org/stable/users/explain/axes/legend_guide.html)\n",
+    "Artists they can represent. They are discussed in detail in the [legend guide](https://matplotlib.org/stable/users/explain/axes/legend_guide.html).\n",
     "```"
    ]
   },
@@ -471,7 +471,7 @@
     "### Annotations\n",
     "\n",
     "We can also annotate points on a plot, often by connecting an arrow pointing\n",
-    "to *xy*, to a piece of text at *xytext*:\n"
+    "to `xy`, to a piece of text at `xytext`:"
    ]
   },
   {
@@ -517,7 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this basic example, both *xy* and *xytext* are in data coordinates.\n",
+    "In this basic example, both `xy` and `xytext` are in data coordinates.\n",
     "\n",
     "```{seealso}\n",
     "There are a variety of other coordinate systems one can choose -- see\n",
@@ -564,7 +564,9 @@
    "metadata": {},
    "source": [
     "where the ``r`` preceding the title string signifies that the string is a\n",
-    "*raw* string and not to treat backslashes `\\`, which are common in LaTeX, as Python escapes. Note the use of the `math_fontfamily` argument, which allows you to set the font only for maths expressions."
+    "*raw* string.\n",
+    "Thus, it won't treat the backslashes `\\`, which are common in LaTeX, as Python escapes.\n",
+    "Also note the use of the `math_fontfamily` argument, which allows you to set the font for maths expressions separately."
    ]
   },
   {
@@ -629,9 +631,8 @@
     "Most plotting methods have styling options for the Artists, accessible either\n",
     "when a plotting method is called, or from a \"setter\" on the Artist. \n",
     "\n",
-    "In the plot below we manually set the color of the\n",
-    "Artists created by the first `Axes.plot()`, and we set the color of the second line\n",
-    "after the fact with `Line2D.set()`."
+    "In the plot below, we set the color of the first line directly when creating it with `Axes.plot()`, while we set the color of the second line\n",
+    "after its creation with `Line2D.set()`."
    ]
   },
   {
@@ -657,16 +658,11 @@
     "\n",
     "x = np.linspace(0, 1, 100)\n",
     "ax.plot(x, x, color=\"green\", label=\"green\")\n",
+    "\n",
     "(line,) = ax.plot(x, np.sqrt(x))\n",
     "line.set(color=\"red\", label=\"red\")\n",
+    "\n",
     "ax.legend();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "See how the legend automatically represents the line in the right style? And how you can set the label for an Artist directly in `.set()`? Pretty neat, right?"
    ]
   },
   {
@@ -740,7 +736,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is an array of markerstyles available as string codes, or you can even define your own `MarkerStyle` (see the [marker reference](https://matplotlib.org/stable/gallery/lines_bars_and_markers/marker_reference.html)).\n",
+    "There is an number of markerstyles available as string codes, or you can even define your own `MarkerStyle` (see the [marker reference](https://matplotlib.org/stable/gallery/lines_bars_and_markers/marker_reference.html)).\n",
     "\n",
     "Similarly, stroked lines can have a linestyle.  See the [linestyle gallery](https://matplotlib.org/stable/gallery/lines_bars_and_markers/linestyles.html).\n",
     "\n",
