--- a/python-school/dataframes/1-basics.ipynb
+++ b/python-school/dataframes/1-basics.ipynb
@@ -712,7 +712,7 @@
     "```\n",
     "\n",
     "```{note}\n",
-    "It is usually better to start reading any documentation you can find about the dataset before making tests like these. In some situations though, there is no documentation, so you _have to_ make this kind of tests to validate assumptions as much as you can.\n",
+    "It is usually better to start reading any documentation you can find about the dataset before making tests like these. In some situations though, there is no documentation, so you _have to_ make this kind of tests to validate your assumptions.\n",
     "```"
    ]
   },
@@ -1096,6 +1096,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e13b5710",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (17_145, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>duration</th></tr><tr><td>duration[ms]</td></tr></thead><tbody><tr><td>1d</td></tr><tr><td>1d</td></tr><tr><td>1d</td></tr><tr><td>57d</td></tr><tr><td>2d</td></tr><tr><td>&hellip;</td></tr><tr><td>1d</td></tr><tr><td>1d</td></tr><tr><td>null</td></tr><tr><td>null</td></tr><tr><td>null</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (17_145, 1)\n",
+       "┌──────────────┐\n",
+       "│ duration     │\n",
+       "│ ---          │\n",
+       "│ duration[ms] │\n",
+       "╞══════════════╡\n",
+       "│ 1d           │\n",
+       "│ 1d           │\n",
+       "│ 1d           │\n",
+       "│ 57d          │\n",
+       "│ 2d           │\n",
+       "│ …            │\n",
+       "│ 1d           │\n",
+       "│ 1d           │\n",
+       "│ null         │\n",
+       "│ null         │\n",
+       "│ null         │\n",
+       "└──────────────┘"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "protests.select(pl.col('duration'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ef63e5a2",
    "metadata": {},
@@ -1135,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "c348a746",
    "metadata": {
     "scrolled": false
@@ -1169,7 +1217,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "1fde7d07",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1260,7 @@
        "└────────────┴───────────┴───────┴──────┴───┴─────────┴────────────┴──────────┴──────────────┘"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "ea89e51e",
    "metadata": {
     "scrolled": true
@@ -1277,7 +1325,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "d62e3253",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1398,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "38ba0787",
    "metadata": {},
    "outputs": [
@@ -1417,7 +1465,7 @@
        "└────────────┴───────────┴───────┴──────┴───┴──────────────┴────────────┴────────────┴─────────────┘"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,12 +1479,12 @@
    "id": "c9e67d1b",
    "metadata": {},
    "source": [
-    "It's possible to combine conditions like we already did in [Numpy filtering](array_select): for example by using the special operator conjunction `&` :"
+    "It's also possible to combine conditions like we already did in [Numpy filtering](array_select): for example by using the special operator conjunction `&` :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "2c1f87a9",
    "metadata": {},
    "outputs": [
@@ -1481,7 +1529,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,12 +1556,13 @@
    "source": [
     "### Sorting\n",
     "\n",
-    "To obtain a NEW dataframe sorted according to one or more columns, we can use the `.sort()` method: "
+    "To obtain a new dataframe sorted according to one or more columns, we can use the `.sort()` method.\n",
+    "For instance, to see the longest protests, we'd do:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "26ee6091",
    "metadata": {
     "scrolled": false
@@ -1546,7 +1595,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴─────────┴────────────┴──────────┴──────────────┘"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "0108206c",
    "metadata": {},
    "outputs": [
@@ -1607,7 +1656,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1648,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "c2f2d672",
    "metadata": {
     "scrolled": false
@@ -1691,7 +1740,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1712,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "5d6c1233",
    "metadata": {},
    "outputs": [
@@ -1753,7 +1802,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1798,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "ff3ecec9",
    "metadata": {
     "tags": [
@@ -1841,7 +1890,7 @@
        "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1865,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "ec39a0dd",
    "metadata": {},
    "outputs": [],
@@ -1880,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "86d941ff",
    "metadata": {
     "tags": [
@@ -1916,7 +1965,7 @@
        "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1939,7 +1988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "e8e9a1d7",
    "metadata": {},
    "outputs": [
@@ -1990,7 +2039,7 @@
        "└─────────┴────────┴────────┴───────────────┴───┴──────────┴───────────────┴──────────────┴────────┘"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
