--- a/python-school/functions/fun1-def-sol.ipynb
+++ b/python-school/functions/fun1-def-sol.ipynb
@@ -283,18 +283,18 @@
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'new_outptut' is not defined",
+     "evalue": "name 'new_output' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mnew_outptut\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'new_outptut' is not defined"
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mnew_output\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'new_output' is not defined"
      ]
     }
    ],
    "source": [
-    "print(new_outptut)"
+    "print(new_output)"
    ]
   },
   {
@@ -328,7 +328,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990850e020>"
+       "<IPython.lib.display.IFrame at 0x72c3d7fae200>"
       ]
      },
      "metadata": {},
@@ -653,7 +653,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990866f940>"
+       "<IPython.lib.display.IFrame at 0x72c3dc0c4fd0>"
       ]
      },
      "metadata": {},
@@ -709,7 +709,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990866f940>"
+       "<IPython.lib.display.IFrame at 0x72c3d7f64b20>"
       ]
      },
      "metadata": {},
@@ -771,7 +771,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x799908658550>"
+       "<IPython.lib.display.IFrame at 0x72c3d7508070>"
       ]
      },
      "metadata": {},
@@ -831,7 +831,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990866f5b0>"
+       "<IPython.lib.display.IFrame at 0x72c3dc361cf0>"
       ]
      },
      "metadata": {},
@@ -893,7 +893,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990866d0f0>"
+       "<IPython.lib.display.IFrame at 0x72c3dc252b30>"
       ]
      },
      "metadata": {},
@@ -966,7 +966,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990866d240>"
+       "<IPython.lib.display.IFrame at 0x72c3dc3b8e80>"
       ]
      },
      "metadata": {},
@@ -1059,7 +1059,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7999086e0250>"
+       "<IPython.lib.display.IFrame at 0x72c3d7fd9240>"
       ]
      },
      "metadata": {},
@@ -1139,7 +1139,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990933ada0>"
+       "<IPython.lib.display.IFrame at 0x72c3d7508280>"
       ]
      },
      "metadata": {},
@@ -1192,7 +1192,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990866f280>"
+       "<IPython.lib.display.IFrame at 0x72c3dc3b9060>"
       ]
      },
      "metadata": {},
@@ -1403,7 +1403,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990850e020>"
+       "<IPython.lib.display.IFrame at 0x72c3dc3b8280>"
       ]
      },
      "metadata": {},
@@ -1481,7 +1481,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990866f5b0>"
+       "<IPython.lib.display.IFrame at 0x72c3dc3bba30>"
       ]
      },
      "metadata": {},
@@ -1563,7 +1563,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990866f5b0>"
+       "<IPython.lib.display.IFrame at 0x72c3dc3b8e80>"
       ]
      },
      "metadata": {},
@@ -1657,7 +1657,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990866f5b0>"
+       "<IPython.lib.display.IFrame at 0x72c3dc3b8250>"
       ]
      },
      "metadata": {},
@@ -1708,7 +1708,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990865b4c0>"
+       "<IPython.lib.display.IFrame at 0x72c3dc3b8250>"
       ]
      },
      "metadata": {},
@@ -1763,7 +1763,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79990866f3d0>"
+       "<IPython.lib.display.IFrame at 0x72c3dc3b8c10>"
       ]
      },
      "metadata": {},
@@ -1934,7 +1934,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7999086b2320>"
+       "<IPython.lib.display.IFrame at 0x72c3d7fafa90>"
       ]
      },
      "metadata": {},
@@ -1987,7 +1987,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7999086b2d10>"
+       "<IPython.lib.display.IFrame at 0x72c3d7f64b20>"
       ]
      },
      "metadata": {},
