--- a/python-school/data_files/1-lines-sol.ipynb
+++ b/python-school/data_files/1-lines-sol.ipynb
@@ -95,7 +95,7 @@
     "The command\n",
     "\n",
     "```python\n",
-    "open('data/people-simple.txt', encoding='utf-8')\n",
+    "open(\"data/people-simple.txt\", encoding=\"utf-8\")\n",
     "```\n",
     "\n",
     "allows us to open the text file by telling Python the file path `'people-simple.txt'` and the encoding in which it was written (`encoding='utf-8'`). "
@@ -107,9 +107,17 @@
    "source": [
     "### The encoding\n",
     "\n",
-    "The encoding depends on the operating system and on the editor used to write the file. When we open a file, Python is not capable to figure out the encoding, and if we do not specify anything Python might open the file assuming an encoding different from the original. As a result, if we omit the encoding (or we put a wrong one) we might end up seeing weird characters (like little squares instead of accented letters).\n",
+    "Files on a computer are just a bunch of zeros and ones.\n",
+    "Text files are no different, so what allows any program to interpret these zeros and ones into text is what's called the file encoding.\n",
+    "Python being a program like any other, it needs to know with what encoding a text file was written to interpret it correctly.\n",
     "\n",
-    "In general, when you open a file, try not specifying any encoding, by default Python assumes it's `utf-8` which is the most common one. If it doesn't work, you should try others. For example for files written in southern Europe with Windows you might check `encoding='latin-1'`. If you open a file written elsewhere, you might need other encodings. For more in-depth information, you can read [Dive into Python - Chapter 4 - Strings](https://diveintopython3.problemsolving.io/strings.html), and [Dive into Python - Chapter 11 - File](https://diveintopython3.problemsolving.io/files.html)."
+    "Most of the time though, you don't need to worry about it.\n",
+    "When you open a file, first try not specifying any encoding.\n",
+    "By default, Python assumes it's `utf-8`, which is the most common one.\n",
+    "If it doesn't work, then you can try others.\n",
+    "For example for files written in southern Europe with Windows you might try `encoding='latin-1'`.\n",
+    "If you open a file written elsewhere, you might need other encodings.\n",
+    "For more in-depth information, you can read [Dive into Python - Chapter 4 - Strings](https://diveintopython3.problemsolving.io/strings.html), and [Dive into Python - Chapter 11 - File](https://diveintopython3.problemsolving.io/files.html)."
    ]
   },
   {
@@ -121,17 +129,38 @@
     "The `with` defines a block with instructions inside:\n",
     "\n",
     "```python\n",
-    "with open('data/people-simple.txt', encoding='utf-8') as f:\n",
+    "with open(\"data/people-simple.txt\", encoding=\"utf-8\") as f:\n",
     "    line = f.readline()\n",
     "    print(line)\n",
     "```\n",
     "\n",
     "`with` is used to create a *context* in which to execute the indented block of code that follows it.\n",
-    "The context here is simply that a file is open, and can be operated on through the `f` variable.\n",
-    "**Importantly, when you're out of the indented block -- which means that the context \"the file is open\" ends -- the file... gets closed.**\n",
-    "\n",
+    "When we go back to the normal indentation level, we leave this context block.\n",
+    "The context here is simply that a file is open, and that you can do stuff with it through the variable called `f`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```{admonition} Question\n",
-    "Then, before running the following cell, try to guess what happens when we try reading another line with `f`.\n",
+    "When we are out of this context, what happens then to the file and to the variable `f`?\n",
+    "```\n",
+    "\n",
+    "```{admonition} Answer\n",
+    ":class: tip dropdown\n",
+    "\n",
+    "When you're out of the indented block, this means that the context \"the file is open\" ends.\n",
+    "Therefore the file... is closed.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Question\n",
+    "More practically, before running the following cell, try to guess what happens when we try reading another line with `f`.\n",
     "```"
    ]
   },
@@ -1468,7 +1497,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
