file variable to `file` instead of `f`

--- a/python-school/data_files/3-json-sol.ipynb
+++ b/python-school/data_files/3-json-sol.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -53,8 +53,8 @@
     }
    ],
    "source": [
-    "with open('data/bike-sharing-lavis-single.json') as f:\n",
-    "    json_content = f.read()\n",
+    "with open('data/bike-sharing-lavis-single.json') as file:\n",
+    "    json_content = file.read()\n",
     "    print(type(json_content))\n",
     "    print(json_content)"
    ]
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -114,8 +114,8 @@
     }
    ],
    "source": [
-    "with open('data/bike-sharing-lavis-single.json') as f:\n",
-    "    python_content = json.load(f)\n",
+    "with open('data/bike-sharing-lavis-single.json') as file:\n",
+    "    python_content = json.load(file)\n",
     "    \n",
     "print(type(python_content))\n",
     "pprint(python_content)"
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -177,8 +177,8 @@
     }
    ],
    "source": [
-    "with open('data/bike-sharing-lavis.json') as f:\n",
-    "    python_content = json.load(f)\n",
+    "with open('data/bike-sharing-lavis.json') as file:\n",
+    "    python_content = json.load(file)\n",
     "\n",
     "print(type(python_content))\n",
     "pprint(python_content)"
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        " 'position': [46.139732902099794, 11.111516155225331]}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "'Piazza Grazioli - Lavis'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "[46.139732902099794, 11.111516155225331]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -330,8 +330,8 @@
     }
    ],
    "source": [
-    "with open('data/employees.jsonl') as f:\n",
-    "    for i, line in enumerate(f):\n",
+    "with open('data/employees.jsonl') as file:\n",
+    "    for i, line in enumerate(file):\n",
     "        python_content = json.loads(line)   # converts json text to a python object\n",
     "        print('Object ', i)\n",
     "        print(python_content)\n",
@@ -343,7 +343,7 @@
    "metadata": {},
    "source": [
     "```{admonition} Question\n",
-    "Here, we could also have first read all the lines with `f.readlines()`, and then iterated over them. Could you guess which option is better? Using `f.readlines()` or iterating over `f`? Why?\n",
+    "Here, we could also have first read all the lines with `file.readlines()`, and then iterated over them. Could you guess which option is better? Using `file.readlines()` or iterating over `file`? Why?\n",
     "```"
    ]
   },
@@ -359,7 +359,7 @@
     "```{admonition} Answer\n",
     ":class: tip dropdown\n",
     "\n",
-    "Iterating over `f` is the recommended way to read such files, to limit your memory consumption. This way, no matter the file size, you'll be able to read it. It's actually kind of the whole point of putting data in this format!\n",
+    "Iterating over `file` is the recommended way to read such files, to limit your memory consumption. This way, no matter the file size, you'll be able to read it. It's actually kind of the whole point of putting data in this format!\n",
     "```"
    ]
   },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,9 +380,9 @@
     "import shutil\n",
     "shutil.copyfile('data/employees.jsonl', 'data/employees_extended.jsonl')\n",
     "\n",
-    "with open('data/employees_extended.jsonl', 'a') as f:\n",
+    "with open('data/employees_extended.jsonl', 'a') as file:\n",
     "    json_text = json.dumps({'name': 'Bob', 'surname': 'Ross', 'age': 42})\n",
-    "    f.write(f\"{json_text}\\n\")"
+    "    file.write(file\"{json_text}\\n\")"
    ]
   },
   {
@@ -428,8 +428,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
