--- a/python-school/data_files/2-csv-sol.ipynb
+++ b/python-school/data_files/2-csv-sol.ipynb
@@ -9,10 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "47Jg7yaZ5bSy"
-   },
+   "metadata": {},
    "source": [
     "There can be various formats for tabular data, among which you surely know Excel  (`.xls` or `.xslx`). Unfortunately, if you want to programmatically process data, you should better avoid them and prefer if possible the CSV format, literally 'Comma Separated Value'. Why? Excel format is very complex and may hide several things which have nothing to do with the raw data:\n",
     "\n",
@@ -104,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -154,9 +151,9 @@
     }
    ],
    "source": [
-    "with open(\"data/example-1.csv\", newline=\"\") as f:\n",
+    "with open(\"data/example-1.csv\", newline=\"\") as file:\n",
     "    # we create an object 'my_reader' which will take rows from the file\n",
-    "    my_reader = csv.reader(f, delimiter=\",\")\n",
+    "    my_reader = csv.reader(file, delimiter=\",\")\n",
     "\n",
     "    # 'my_reader' is an object considered 'iterable', that is,\n",
     "    # if used in a 'for' will produce a sequence of rows from csv\n",
@@ -179,13 +176,13 @@
     "As already did for files with lines before, we open the file in a `with` block:\n",
     "\n",
     "```python\n",
-    "with open('data/example-1.csv', newline='') as f:\n",
+    "with open('data/example-1.csv', newline='') as file:\n",
     "```\n",
     "\n",
     "Once the file is open, in the row \n",
     "\n",
     "```python\n",
-    "    my_reader = csv.reader(f, delimiter=',')\n",
+    "    my_reader = csv.reader(file, delimiter=',')\n",
     "```\n",
     "\n",
     "we ask to `csv` module to create a reader object  called `my_reader` for our file, telling Python that comma is the delimiter for fields.\n",
@@ -229,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -241,8 +238,8 @@
     }
    ],
    "source": [
-    "with open(\"data/example-1.csv\", newline=\"\") as f:\n",
-    "    my_reader = csv.reader(f, delimiter=\",\")\n",
+    "with open(\"data/example-1.csv\", newline=\"\") as file:\n",
+    "    my_reader = csv.reader(file, delimiter=\",\")\n",
     "    print(my_reader)"
    ]
   },
@@ -257,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "answer",
@@ -274,8 +271,8 @@
     }
    ],
    "source": [
-    "with open(\"data/example-1.csv\", newline=\"\") as f:\n",
-    "    my_reader = csv.reader(f, delimiter=\",\")\n",
+    "with open(\"data/example-1.csv\", newline=\"\") as file:\n",
+    "    my_reader = csv.reader(file, delimiter=\",\")\n",
     "    print(list(my_reader))"
    ]
   },
@@ -311,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "answer",
@@ -320,15 +317,15 @@
    },
    "outputs": [],
    "source": [
-    "with open(\"data/example-1.csv\", newline=\"\") as f:\n",
-    "    my_reader = csv.reader(f, delimiter=\",\")\n",
+    "with open(\"data/example-1.csv\", newline=\"\") as file:\n",
+    "    my_reader = csv.reader(file, delimiter=\",\")\n",
     "    header = next(my_reader)\n",
     "    big_list = [[row[0], int(row[1])] for row in my_reader]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "answer",
@@ -379,8 +376,8 @@
     }
    ],
    "source": [
-    "with open(\"data/example-1.csv\", newline=\"\") as f:\n",
-    "    my_reader = csv.reader(f, delimiter=\",\")\n",
+    "with open(\"data/example-1.csv\", newline=\"\") as file:\n",
+    "    my_reader = csv.reader(file, delimiter=\",\")\n",
     "    print(list(my_reader))\n",
     "    print(list(my_reader))"
    ]
@@ -394,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "raises-exception",
@@ -409,14 +406,14 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/example-1.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:    \n\u001b[1;32m      2\u001b[0m     my_reader \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mreader(f, delimiter\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m)         \n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmy_reader\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "Cell \u001b[0;32mIn[13], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/example-1.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:    \n\u001b[1;32m      2\u001b[0m     my_reader \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mreader(file, delimiter\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m)         \n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmy_reader\u001b[49m\u001b[43m)\u001b[49m)\n",
       "\u001b[0;31mValueError\u001b[0m: I/O operation on closed file."
      ]
     }
    ],
    "source": [
-    "with open(\"data/example-1.csv\", newline=\"\") as f:\n",
-    "    my_reader = csv.reader(f, delimiter=\",\")\n",
+    "with open(\"data/example-1.csv\", newline=\"\") as file:\n",
+    "    my_reader = csv.reader(file, delimiter=\",\")\n",
     "print(list(my_reader))"
    ]
   },
@@ -487,10 +484,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -505,8 +500,8 @@
     }
    ],
    "source": [
-    "with open('data/example-1.csv', newline='') as f:    \n",
-    "    my_reader = csv.DictReader(f)   # Notice we now used DictReader\n",
+    "with open('data/example-1.csv', newline='') as file:    \n",
+    "    my_reader = csv.DictReader(file)   # Notice we now used DictReader\n",
     "    for d in my_reader:\n",
     "        print(d)"
    ]
@@ -533,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,10 +592,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -657,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "answer",
@@ -679,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +710,7 @@
        "  'Unità di misura': 'µg/mc'}]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "answer",
@@ -772,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +801,7 @@
        " ('Monte Gaza', 'Ozono'): 99.0858310626703}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,10 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "WbO-GSrX5bSz"
-   },
+   "metadata": {},
    "source": [
     "## Exercise - botteghe storiche \n",
     "\n",
@@ -1034,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "answer",
@@ -1063,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1075,7 @@
        " ('BAZAR', 11)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "answer",
@@ -1152,10 +1142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "enrich(rank_categories(stopwords))                "
@@ -1163,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1248,8 +1236,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
