fix missed `f` instances

--- a/python-school/data_files/3-json-sol.ipynb
+++ b/python-school/data_files/3-json-sol.ipynb
@@ -382,7 +382,7 @@
     "\n",
     "with open('data/employees_extended.jsonl', 'a') as file:\n",
     "    json_text = json.dumps({'name': 'Bob', 'surname': 'Ross', 'age': 42})\n",
-    "    file.write(file\"{json_text}\\n\")"
+    "    file.write(f\"{json_text}\\n\")"
    ]
   },
   {
@@ -415,7 +415,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
